<?xml version="1.0"?>
<package>
  <name>waterplus_map_tools</name>
  <version>0.0.0</version>
  <description>The waterplus_map_tools package</description>

  <maintainer email="zhangwanjie@126.com">Zhang Wanjie</maintainer>

  <url type="website">http://www.6-robot.com</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>rviz</run_depend>

  <export>
    <rviz plugin="${prefix}/waterplus_map_tools_plugin.xml"/>
  </export>
</package>
